--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </p>
           <div class="email">
               <input type="email" placeholder="Enter your Email">
-              <button class="btn btn-cta">Get Started</button>
+              <a href="#" class="btn btn-cta">Get Started</a>
           </div>
       </div>
       <div class="right">
@@ -96,8 +96,8 @@
           </p>
       </div>
       <div class="right">
-          <input type="email" placeholder="email@examole.com">
-          <button class="btn">Get Started For Free</button>
+          <input type="email" placeholder="email@example.com">
+          <a href="#" class="btn">Get Started For Free</a>
       </div>
     </div>
   </section>
